<resources>
    <string name="app_name">Rezeptebuch</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="lblTitle">Title</string>
    <string name="lblCategory">Category</string>
    <string name="lblDuration">Duration</string>
    <string name="lblIngredients">Ingredients</string>
    <string name="lblInstructions">Instructions</string>
    <string name="lblSettings">Settings</string>
    <string name="lblDetailView">Detail View</string>
    <string name="lblDetailEdit">Detail Edit</string>
    <string name="lblReset">Reset</string>
    <string name="lblPathToDb">Path to Database</string>
    <string name="lblList">List</string>
    <string name="btnTest1_text">New RecipeSqliteHelper</string>
    <string name="btnTest4_text">Print Path to DB</string>
    <string name="btnTest3_text">Add Testdata</string>
    <string name="btnTest2_text">Test2</string>
    <string name="btnTest5_text">Test5</string>
    <string name="btnTest6_text">Test6</string>
    <string name="btnTest7_text">Test7</string>
    <string name="btnTest8_text">Test8</string>
    <string name="btnTest16_text">Test16</string>
    <string name="btnTest15_text">Test15</string>
    <string name="btnTest14_text">Test14</string>
    <string name="btnTest13_text">Test13</string>
    <string name="btnTest12_text">Test12</string>
    <string name="btnTest11_text">Test11</string>
    <string name="btnTest10_text">Test10</string>
    <string name="btnTest9_text">Test9</string>
    <string name="lblAdd">Add Recipe</string>
    <string name="lblSubmit">Submit</string>
    <string name="lblDelete">Delete</string>
    <string name="lblUpdate">Update</string>
</resources>
