<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/etTitle"
        android:text="@string/lblTitle" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblTitle"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibtnImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_menu_gallery" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/etCategory"
                android:text="@string/lblCategory" />

            <EditText
                android:id="@+id/etCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:hint="@string/lblCategory"
                android:textSize="@dimen/default_font_size" />

            <TextView
                android:id="@+id/lblDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/etDuration"
                android:text="@string/lblDuration" />

            <EditText
                android:id="@+id/etDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lblDuration"
                android:textSize="@dimen/default_font_size" />

            <TextView
                android:id="@+id/lblIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/etIngredients"
                android:text="@string/lblIngredients" />

            <EditText
                android:id="@+id/etIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textMultiLine"
                android:singleLine="false"
                android:hint="@string/lblIngredients"
                android:textSize="@dimen/default_font_size" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/lblInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/etInstructions"
        android:text="@string/lblInstructions" />

    <EditText
        android:id="@+id/etInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lblInstructions"
        android:textSize="@dimen/default_font_size" />
</LinearLayout>